--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.headerStyles {
+  padding: 10px;
+  height: 56px;
+  background-color: #016595;
+  background-image: linear-gradient(315deg,#016595 74%,#000000 0%) !important;
+  color: #fff;
+  white-space: nowrap;
+  overflow: hidden;
+  border-radius: 6px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Provide sufficient contrast against white background */
+a {
+  color: #0366d6;
 }
+
+code {
+  color: #E01A76;
+}
+
+body {
+  font-size: 14px;
+  font-family: none;
+}
+
+
+div .row {
+  padding-top: 10px;
+}
+
+.required {
+  color: red;
+  font-weight: bold;
+}
+
+.file-drop {
+  min-height: 50px;
+}
+
+.modal-dialog {
+  max-width: 700px !important;
+  margin: 1.75rem auto;
+}
+
+.headerStyles {
+  padding: 10px;
+  height: 56px;
+  background-color: #016595;
+  background-image: linear-gradient(315deg,#0887c2 74%,#e9ede5 0%) !important;
+  color: #fff;
+  white-space: nowrap;
+  overflow: hidden;
+  border-radius: 6px;
+}
+
+.textCenter {
+  text-align: center
+}
+
+.table {
+  border: 1px solid #ddd;
+  background-color: none !important;
+}
+.tableCase {
+  width: 100%;
+  height: 80vh;
+  overflow: scroll;
+}
+.tbody {
+  position: relative;
+  z-index: 0;
+}
+.table td, .table th {
+  padding: 6px;
+ 
+  overflow: hidden;
+  text-align: left;
+
+}
+.table td{
+  font-weight: bold;
+}
+.table th {
+  background-color: #016595;
+  border-bottom-color: #A8A5A0;
+  color: white;
+  font-size: 15px;
+}
+
+
+
+.rowCase {
+  border-bottom-color: #E6E0D4;
+  border-bottom-width: 1px;
+  background-color: #EEEEEE !important;
+  --bs-table-bg: var(--bs-table-bg);
+}
+
+.rowCaseAlt {
+  border-bottom-color: #E6E0D4;
+  border-bottom-width: 1px;
+  background-color: #fefefe !important;
+}
+
+
+
+.btn-primary {
+  color: #fff;
+  background-color: #1b6ec2;
+  border-color: #1861ac;
+}
+
+.react-datepicker-popper {
+  z-index: 9999 !important;
+}
+
+.alert {
+  padding: 6px!important;
+}
+
+
+
